# Xana

./: .gitignore  .readthedocs.yml  LICENSE  README  README.md  conftest.py  index.md  pyproject.toml  setup.cfg  setup.py  setup.py~
.github/workflows/: python-package.yml  python-publish.yml  tests.yml
Doc/: Makefile  conf.orig.py  conf.py  conf_beckhoff.py  index.rst  index.rst~  xfmt.rst  xpcs.rst  xsvs.rst  xsvs.rst~
Xana/: Analist.py  Analysis.py  Analysis.py~  Decorators.py  Decorators.py~  Setup.py  Setup.py~  Xana.py  Xana.py~  Xdb.py  Xdb.py~  __init__.py  analyze.py~  helper.py
Xana/ProcData/: ArrangeModules.py  CbfMethods.py  EdfFile3.py  EdfFile3.py~  EdfMethods.py  EdfMethods.py~  H5Methods.py  H5Methods.py~  NxsMethods.py  ReadData.py  ReadData.py~  Xdata.py  Xdata.py~  Xfmt.py  Xfmt.py~  getmeta.py  to_h5.py  to_h5.py~
Xana/SaxsAna/: Saxs.py  Soq.py  __init__.py  analyze.py  defineqrois.py  find_center.py  integrate.py  phicorr.py  pysaxs3.py
Xana/XParam/: parameters.py  parameters.py~  scratch.py
Xana/Xdrop/: DropletizeData.py  dropimgood_sel.f90  hist_adu_fss.f90  hist_adu_rfs.f90  hist_adu_rfs2.f90  make_drop_adu.sh  make_dropletm.sh
Xana/Xfit/: BandyFunctions.py  DetectorCorrection.py  DetectorCorrection.py~  DetectorCorrection2.py  FitPoissonGamma.py  FitPoissonGammaLikelihood.py  FitPoissonGammaLikelihood.py~  MCMC_straight_line.py  PlotPoissonGamma.py  PoissonGammaDistribution.py  PoissonGammaDistribution.py~  basic.py  (+13 more)
docs/: SomeStuff.rst  api.rst  conf.py  index.md  index.rst  requirements-docs.txt
xpcs_example/: xana_example.ipynb
(+117 files in other folders)
