; setyp.cfg
[metadata]
name = Xana
version = 0.0.8
author = Mario Reiser
author_email = mario.mkel@gmail.com
url = https://github.com/reiserm/Xana.git
keywords =
  analysis
  XPCS
  XSVS
  XFEL
  X-ray
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Data Analysis
long_description = file: README.md

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  pandas
  lmfit
  numpy
  pyfai
  cbf
  emcee
  corner
  h5py

[options.packages.find]


